Footer height changed - hopefully fixed the document clipping issue

--- a/static/src/components/Footer/styles.scss
+++ b/static/src/components/Footer/styles.scss
@@ -1,5 +1,5 @@
 :local(.styles) {
-  height: 2.25%;
+  height: 2;
   padding-top: 1.25%;
   padding-bottom: 2.75%;
   text-align: center;
